--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
         <p>Copyright &#169; 2022 All Rights Reserved</p>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inlines">
-              <a class="links" href="https://www.facebook.com/SamyakKhairnar">
+              <a class="links" target="_blank" href="https://www.facebook.com/SamyakKhairnar">
                 <i class="fa-brands fb fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-item-inlines">
-              <a class="links" href="https://twitter.com/SamyakKhairnar">
+              <a class="links" target="_blank" href="https://twitter.com/SamyakKhairnar">
                 <i class="fa-brands tw fa-twitter"></i>
               </a>
             </li>
             <li class="list-item-inlines">
-              <a class="links" href="https://github.com/SamyakKhairnar">
+              <a class="links" target="_blank" href="https://github.com/SamyakKhairnar">
                 <i class="fa-brands git fa-github"></i>
               </a>
             </li>
             <li class="list-item-inlines">
-              <a class="links" href="https://www.linkedin.com/in/samyakkhairnar/">
+              <a class="links" target="_blank" href="https://www.linkedin.com/in/samyakkhairnar/">
                 <i class="fa-brands in fa-linkedin-in"></i>
               </a>
             </li>
